Added Buttons for Random Colors 1 and 2 as well as Lucky Dip
- Random Color 1 button selects random color for first gradient
- Random Color 2 button selects random color for seconds gradient
- Lucky dip random selects colors 1 and 2
Stylings for buttons still need to be done.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
   <h1>Background Generator</h1>
-  <input class = "color1" type="color" name="color1" value="#ff0000">
-  <input class = "color2" type="color" name="color2" value="#FFFF00">
+  <button class = "randColor1">Random Colour 1</button>
+  <button class = "randColor2">Random Colour 2</button>
+  <button class = "luckyDip">Lucky Dip!</button><br>
+  <input class = "color1 color-box" type="color" name="color1" value="#ff0000">
+  <input class = "color2 color-box" type="color" name="color2" value="#FFFF00">
   <h2>Current CSS Background</h2>
   <h3></h3>
   <script type="text/javascript" src="script.js"></script>
